foo
listener.c: In function ‘fdump’:
listener.c:49:9: warning: unused variable ‘shade’ [-Wunused-variable]
   char *shade = "";
         ^
listener.c: In function ‘lisp_encode’:
listener.c:94:36: warning: format ‘%x’ expects argument of type ‘unsigned int’, but argument 3 has type ‘word {aka long unsigned int}’ [-Wformat=]
     length += sprintf(sexp+length, "#x%x ",
                                    ^
listener.c:98:34: warning: embedded ‘\0’ in format [-Wformat-contains-nul]
   length += sprintf(sexp+length, ")\n\0");
                                  ^
listener.c: In function ‘set_stack’:
listener.c:179:14: warning: implicit declaration of function ‘display_stack’ [-Wimplicit-function-declaration]
   if (DEBUG) display_stack(uc, 8);
              ^
listener.c: In function ‘hatch_stack’:
listener.c:249:34: warning: pointer targets in passing argument 2 of ‘uc_reg_write_batch’ differ in signedness [-Wpointer-sign]
   UNICORN(uc_reg_write_batch(uc, reg_vec, ptrs, reg_vec_len),
                                  ^
listener.c:23:39: note: in definition of macro ‘UNICORN’
 #define UNICORN(com, str) if ((err = (com))) { uc_perror(str,err); exit(EXIT_FAILURE); }
                                       ^
In file included from includes.h:37:0,
                 from listener.c:1:
/usr/include/unicorn/unicorn.h:401:8: note: expected ‘int *’ but argument is of type ‘u32 * {aka unsigned int *}’
 uc_err uc_reg_write_batch(uc_engine *uc, int *regs, void *const *vals, int count);
        ^
listener.c:274:32: warning: passing argument 2 of ‘uc_emu_start’ makes integer from pointer without a cast [-Wint-conversion]
   if ((err = (uc_emu_start(uc, start, 0, 0, TTL)))){
                                ^
In file included from includes.h:37:0,
                 from listener.c:1:
/usr/include/unicorn/unicorn.h:464:8: note: expected ‘uint64_t {aka long unsigned int}’ but argument is of type ‘u64 * {aka long unsigned int *}’
 uc_err uc_emu_start(uc_engine *uc, uint64_t begin, uint64_t until, uint64_t timeout, size_t count);
        ^
listener.c:279:25: warning: pointer targets in passing argument 2 of ‘uc_reg_read_batch’ differ in signedness [-Wpointer-sign]
   uc_reg_read_batch(uc, reg_vec, ptrs, reg_vec_len);
                         ^
In file included from includes.h:37:0,
                 from listener.c:1:
/usr/include/unicorn/unicorn.h:415:8: note: expected ‘int *’ but argument is of type ‘u32 * {aka unsigned int *}’
 uc_err uc_reg_read_batch(uc_engine *uc, int *regs, void **vals, int count);
        ^
listener.c:284:21: error: ‘sys_abi_len’ undeclared (first use in this function)
     for (i = 0; i < sys_abi_len; i++) {
                     ^
listener.c:284:21: note: each undeclared identifier is reported only once for each function it appears in
In file included from includes.h:43:0,
                 from listener.c:1:
hatchery.h:46:17: warning: format ‘%llx’ expects argument of type ‘long long unsigned int’, but argument 2 has type ‘u32 {aka unsigned int}’ [-Wformat=]
 #define WORDFMT "%llx"
                 ^
listener.c:286:14: note: in expansion of macro ‘WORDFMT’
       printf(WORDFMT, seedvals.words[i]);
              ^
listener.c: In function ‘display_stack’:
listener.c:316:20: warning: format ‘%x’ expects argument of type ‘unsigned int’, but argument 3 has type ‘u64 {aka long unsigned int}’ [-Wformat=]
     fprintf(stderr,"%8.8x => %8.8x\n",
                    ^
listener.c:316:20: warning: format ‘%x’ expects argument of type ‘unsigned int’, but argument 4 has type ‘u64 {aka long unsigned int}’ [-Wformat=]
listener.c: In function ‘map_memory’:
listener.c:350:21: warning: format ‘%x’ expects argument of type ‘unsigned int’, but argument 4 has type ‘size_t {aka long unsigned int}’ [-Wformat=]
     fprintf(stderr, "Memory successfully written, from 0x%x to 0x%x.\n",
                     ^
make[1]: *** [../build/onto] Error 1
make: *** [all] Error 2
